--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,6 @@ typings/
 # dotenv environment variables file
 .env
 
-/package-lock.json
+# Only apps should have lockfiles
+yarn.lock
+package-lock.json
