--- a/.npmignore
+++ b/.npmignore
@@ -36,4 +36,6 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-/package-lock.json
+# Only apps should have lockfiles
+yarn.lock
+package-lock.json
