--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier ./*.js --write",
     "patch": "np patch --yolo",
     "minor": "np minor --yolo",
-    "major": "np major --yolo"
+    "major": "np major --yolo",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,9 +31,10 @@
   "homepage": "https://github.com/StarpTech/sveltejs-brunch#readme",
   "dependencies": {
     "combine-source-map": "^0.8.0",
-    "svelte": "^1.46.0"
+    "svelte": "^3.1.0"
   },
   "devDependencies": {
+    "jest": "^24.8.0",
     "np": "^2.18.2",
     "prettier": "^1.9.1"
   }
